--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
 </head>
 
 <body>
     <div id="main-box">
         <div id="headline">
             <div id="logo">
-                <h2>PORTFOLIO</h2>
             </div>
 
             <nav class="navbar navbar-expand-lg">
@@ -61,21 +59,26 @@
             <h1>"Abhishek Mishra"</h1>
             <h3>And I'm <span class="Multiple-Text"></span></h3>
         </div>
-        <hr>
+        <hr
+            style="border: none; height: 3px; background: white; opacity: 0.8; width: 80%; margin: 20px auto; box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.6);">
+
 
         <div class="section" id="section01">
             <h2> About Me </h2>
-            <img src="/img/pic.jpg" alt="image" />
+            <img src="/img/My_Pic.jpg" alt="image" />
             <p>
                 My name is Abhishek Mishra, I'm from Belaganj ,Gaya (Bihar),
-                I have completed My schooling from S.S.V.M (Belaganj) and currently I am Persuing Master of Computer Application(MCA) from Chandigarh University.
+                I have completed My schooling from S.S.V.M (Belaganj) and currently I am Persuing Master of Computer
+                Application(MCA) at Chandigarh University.
                 Coming to my family, there are 6 members in my family including me.
                 My strengths are I'm a quick learner and a self-motivated person.
                 My weakness is that If anyone asks me for help I can not say no.
                 My hobbies are Develop Software & Websites , Listening to Music and Singing Music .. <br>
                 That's all about me.
             </p>
-            <hr>
+            <hr
+                style="border: none; height: 3px; background: white; opacity: 0.8; width: 80%; margin: 20px auto; box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.6);">
+
         </div>
 
 
@@ -94,10 +97,10 @@
                 </li>
 
                 <li>
-                    <h3>CSS</h3>
-                    <span class="bar"><span class="css">
+                    <h3>TAILWIND</h3>
+                    <span class="bar"><span class="tailwind">
                             <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:90%">90%</div>
+                                <div class="w3-blue" style="width:78%">78%</div>
                         </span></span>
                 </li>
 
@@ -111,13 +114,23 @@
                 </li>
 
                 <li>
+                    <h3>NODE-JS</h3>
+                    <span class="bar"><span class="nodejs">
+                            <div class="w3-light-grey">
+                                <div class="w3-blue" style="width:85%">85%</div>
+                        </span>
+                    </span>
+                </li>
+
+                <li>
                     <h3>JAVASCRIPT</h3>
                     <span class="bar"><span class="javascript">
                             <div class="w3-light-grey">
                                 <div class="w3-blue" style="width:85%">85%</div>
                             </div>
                         </span></span>
-                    </l80 <li>
+                </li>
+                <li>
                     <h3>JAVA</h3>
                     <span class="bar"><span class="java">
                             <div class="w3-light-grey">
@@ -127,10 +140,10 @@
                 </li>
 
                 <li>
-                    <h3>C++</h3>
-                    <span class="bar"><span class="c++">
+                    <h3>MY_SQL</h3>
+                    <span class="bar"><span class="Mysql">
                             <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:90%">90%</div>
+                                <div class="w3-blue" style="width:80%">80%</div>
                             </div>
                         </span></span>
                 </li>
@@ -145,16 +158,20 @@
                 </li>
 
                 <li>
-                    <h3>C</h3>
-                    <span class="bar"><span class="c">
+                    <h3>MongoDB</h3>
+                    <span class="bar"><span class="MongoDB">
                             <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:100%">100%</div>
+                                <div class="w3-blue" style="width:75%">75%</div>
                             </div>
                         </span></span>
                 </li>
-                <hr>
+                <hr
+                    style="border: none; height: 3px; background: white; opacity: 0.8; width: 80%; margin: 20px auto; box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.6);">
+
             </div>
         </div>
+
+
         <div class="section" id="section04">
             <h2>Projects</h2>
 
@@ -274,7 +291,9 @@
             <div class="info">
                 <p> More Projects Are Available On Github..</p>
             </div>
-            <hr>
+            <hr
+                style="border: none; height: 3px; background: white; opacity: 0.8; width: 80%; margin: 20px auto; box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.6);">
+
         </div>
 
 
@@ -289,7 +308,7 @@
 
                 <p class="links">Or find me on:</p>
                 <div class="linkSize">
-                    <a href="https://www.facebook.com/profile.php?id=100004557768460" target="_blank" "><i
+                    <a href="https://www.facebook.com/profile.php?id=100004557768460" target="_blank"><i
                             class='bx bxl-facebook-circle'></i></a>
                     <a href=" https://www.instagram.com/ig_a_b_h_i__/" target="_blank""><i
                             class='bx bxl-instagram'></i></a>
@@ -297,13 +316,13 @@
                             class='bx bxl-twitter'></i></a>
                     <a href=" https://github.com/Abhishek-Mishra31" target="_blank""><i
                             class='bx bxl-github'></i></a>
-                    <a href=" https://www.linkedin.com/in/abhishek-kumar-192006209/" target="_blank""><i
+                    <a href=" https://www.linkedin.com/in/abhishek-kumar-192006209/" target="_blank"><i
                             class='bx bxl-linkedin-square'></i></a>
                 </div>
             </div>
 
-                        <script src=" https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-                        <script src="/portfolio.js"></script
+            <script src=" https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+            <script src="/portfolio.js"></script
 
 </body>
 
