--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Personal-Portfolio</title>
     <link rel="stylesheet" href="/portfolio_style.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -83,92 +84,104 @@
 
 
         <div class="section" id="section02">
-            <div id="mySkills">
-                <h2> My Skills </h2>
-                <li>
-                    <h3>HTML</h3>
-                    <span class="bar"><span class="html">
-                            <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:90%">90%</div>
-                            </div>
-                        </span>
-                    </span>
+            <section class="container py-5">
+                <h2 class="skills-title text-center text-gray-700 mb-4" data-aos="fade-down">
+                    My Skills
+                </h2>
 
-                </li>
+                <div class="row justify-content-center gx-3">
 
-                <li>
-                    <h3>TAILWIND</h3>
-                    <span class="bar"><span class="tailwind">
-                            <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:78%">78%</div>
-                        </span></span>
-                </li>
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="100">
+                        <div class="skill-card card shadow-sm">
+                            <img src="./img/HTML.svg" alt="HTML" class="skill-icon" />
+                            <small class="skill-text">HTML</small>
+                        </div>
+                    </div>
 
-                <li>
-                    <h3>REACT-JS</h3>
-                    <span class="bar"><span class="reactjs">
-                            <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:95%">95%</div>
-                        </span>
-                    </span>
-                </li>
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="150">
+                        <div class="skill-card card shadow-sm">
+                            <img src="./img/Css.svg" alt="CSS" class="skill-icon" />
+                            <small class="skill-text">CSS</small>
+                        </div>
+                    </div>
 
-                <li>
-                    <h3>NODE-JS</h3>
-                    <span class="bar"><span class="nodejs">
-                            <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:85%">85%</div>
-                        </span>
-                    </span>
-                </li>
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="200">
+                        <div class="skill-card card shadow-sm">
+                            <img src="./img/JavaScript.svg" alt="JavaScript" class="skill-icon" />
+                            <small class="skill-text">JavaScript</small>
+                        </div>
+                    </div>
 
-                <li>
-                    <h3>JAVASCRIPT</h3>
-                    <span class="bar"><span class="javascript">
-                            <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:85%">85%</div>
-                            </div>
-                        </span></span>
-                </li>
-                <li>
-                    <h3>JAVA</h3>
-                    <span class="bar"><span class="java">
-                            <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:80%">80%</div>
-                            </div>
-                        </span></span>
-                </li>
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="250">
+                        <div class="skill-card card shadow-sm">
+                            <img src="./img/React.svg" alt="React" class="skill-icon" />
+                            <small class="skill-text">React</small>
+                        </div>
+                    </div>
 
-                <li>
-                    <h3>MY_SQL</h3>
-                    <span class="bar"><span class="Mysql">
-                            <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:80%">80%</div>
-                            </div>
-                        </span></span>
-                </li>
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="300">
+                        <div class="skill-card card shadow-sm">
+                            <img src="./img/NodeJs.svg" alt="Node.js" class="skill-icon" />
+                            <small class="skill-text">Node.js</small>
+                        </div>
+                    </div>
 
-                <li>
-                    <h3>PYTHON</h3>
-                    <span class="bar"><span class="python">
-                            <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:88%">88%</div>
-                            </div>
-                        </span></span>
-                </li>
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="350">
+                        <div class="skill-card card shadow-sm">
+                            <img src="./img/mysql.svg" alt="MY_SQL" class="skill-icon" />
+                            <small class="skill-text">MY_SQL</small>
+                        </div>
+                    </div>
 
-                <li>
-                    <h3>MongoDB</h3>
-                    <span class="bar"><span class="MongoDB">
-                            <div class="w3-light-grey">
-                                <div class="w3-blue" style="width:75%">75%</div>
-                            </div>
-                        </span></span>
-                </li>
-                <hr
-                    style="border: none; height: 3px; background: white; opacity: 0.8; width: 80%; margin: 20px auto; box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.6);">
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="350">
+                        <div class="skill-card card shadow-sm">
+                            <img src="./img/Java.svg" alt="Java" class="skill-icon" />
+                            <small class="skill-text">Java</small>
+                        </div>
+                    </div>
 
-            </div>
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="350">
+                        <div class="skill-card card shadow-sm">
+                            <img src="./img/tailwind.svg" alt="Tailwind" class="skill-icon" />
+                            <small class="skill-text">Tailwind</small>
+                        </div>
+                    </div>
+
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="350">
+                        <div class="skill-card card shadow-sm">
+                            <img src="./img/mongoDb.svg" alt="MongoDB" class="skill-icon" />
+                            <small class="skill-text">MongoDB</small>
+                        </div>
+                    </div>
+
+
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="400">
+                        <div class="card shadow-sm skill-card">
+                            <img src="./img/Oauth_svg.svg" alt="OAuth" class="skill-icon" />
+                            <small class="skill-text">OAuth</small>
+                        </div>
+                    </div>
+
+
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="450">
+                        <div class="card shadow-sm skill-card">
+                            <img src="./img/jwt.png" alt="JWT" class="skill-icon" />
+                            <small class="skill-text">JWT</small>
+                        </div>
+                    </div>
+
+                    <div class="col-6 col-md-4 mb-3" data-aos="zoom-in" data-aos-delay="500">
+                        <div class="card shadow-sm skill-card">
+
+                            <img src="./img/Bcrypt.svg" alt="bcrypt" class="skill-icon" />
+                            <small class="skill-text">Bcrypt</small>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+            <hr
+                style="border: none; height: 3px; background: white; opacity: 0.8; width: 80%; margin: 20px auto; box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.6);">
         </div>
 
 
@@ -289,7 +302,9 @@
                 </button>
             </div>
             <div class="info">
-                <p> More Projects Are Available On Github..</p>
+                <p> More Projects Are Available On <a
+                        href="https://github.com/Abhishek-Mishra31" target="_blank">
+                        Github </a></p>
             </div>
             <hr
                 style="border: none; height: 3px; background: white; opacity: 0.8; width: 80%; margin: 20px auto; box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.6);">
@@ -310,19 +325,23 @@
                 <div class="linkSize">
                     <a href="https://www.facebook.com/profile.php?id=100004557768460" target="_blank"><i
                             class='bx bxl-facebook-circle'></i></a>
-                    <a href=" https://www.instagram.com/ig_a_b_h_i__/" target="_blank""><i
+                    <a href=" https://www.instagram.com/ig_a_b_h_i__/" target="_blank"><i
                             class='bx bxl-instagram'></i></a>
-                    <a href=" https://twitter.com/Abhishe09449303" target="_blank" "><i
+                    <a href=" https://twitter.com/Abhishe09449303" target="_blank"><i
                             class='bx bxl-twitter'></i></a>
-                    <a href=" https://github.com/Abhishek-Mishra31" target="_blank""><i
+                    <a href=" https://github.com/Abhishek-Mishra31" target="_blank"><i
                             class='bx bxl-github'></i></a>
                     <a href=" https://www.linkedin.com/in/abhishek-kumar-192006209/" target="_blank"><i
                             class='bx bxl-linkedin-square'></i></a>
                 </div>
             </div>
 
-            <script src=" https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-            <script src="/portfolio.js"></script
+            <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+            <script src="/portfolio.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+            <script>
+                AOS.init({ duration: 600, once: true });
+            </script>
 
 </body>
 
