--- a/index.html
+++ b/index.html
@@ -188,26 +188,25 @@
         <div class="section" id="section04">
             <h2>Projects</h2>
 
-            <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
                 <div class="carousel-inner">
-
-
                     <div class="carousel-item active">
+
                         <div class="project my-4">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/my_notebook.jpeg" class="card-img-top" alt="...">
+                                <img src="/img/Projects/LinkCrawler.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">My_Notebook</h5>
-                                    <p class="card-text">The notes app is a user-friendly application designed to store
-                                        and organize
-                                        notes efficiently by leveraging the power of databases.
+                                    <h5 class="card-title">Linkedin_Crawler</h5>
+                                    <p class="card-text">A LinkedIn scraping tool that extracts public profile data
+                                        using LinkedIn URLs and allows downloading the details in PDF format. Ideal for
+                                        research or recruitment use.
                                         <hr>
-                                        <strong><u>Skills Used :- </strong></u> <i> ReactJs , Express-Js , JWT , MongoDB
-                                            , API </i>
+                                        <strong>Skills Used:-</strong> <i> ReactJs , Express, Cheerio, Puppeteer,
+                                            JWT, Bcrypt </i>
                                     </p>
                                     <div class="button">
-                                        <a href="https://github.com/Abhishek-Mishra31?tab=repositories" target="_blank"
-                                            class="btn btn-dark ">View
+                                        <a href="https://github.com/Abhishek-Mishra31/_Linkedin_Crawler_"
+                                            target="_blank" class="btn btn-dark ">View
                                             Repo</a>
                                     </div>
                                 </div>
@@ -219,19 +218,18 @@
                     <div class="carousel-item">
                         <div class="project my-4">
                             <div class="card my-2" style="width: 18rem;">
-                                <img src="/img/news_app.jpeg" class="card-img-top" alt="...">
+                                <img src="/img/Projects/Voting_app.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">News_App</h5>
-                                    <p class="card-text"> A news app utilizing APIs offers users real-time access to
-                                        diverse news
-                                        sources. By leveraging Application Programming Interfaces (APIs).
+                                    <h5 class="card-title">Electrify_Voting_app</h5>
+                                    <p class="card-text"> A secure MERN-based web app for digital elections with voter
+                                        registration, real-time vote tracking, and encrypted authentication.
                                         <hr>
-                                        <strong><u>Skills Used :- </strong></u> <i> ReactJs , API , CSS , JAVASCRIPT
+                                        <strong>Skills Used :- </strong> <i> ReactJs, NodeJs, MongoDB, JWT
                                         </i>
                                     </p>
                                     <div class="button">
-                                        <a href="https://github.com/Abhishek-Mishra31?tab=repositories" target="_blank"
-                                            class="btn btn-dark">View
+                                        <a href="https://github.com/Abhishek-Mishra31/Electrify-Voting-App"
+                                            target="_blank" class="btn btn-dark">View
                                             Repo</a>
                                     </div>
                                 </div>
@@ -242,20 +240,18 @@
                     <div class="carousel-item">
                         <div class="project my-4">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/cheatsheet_app.jpeg" class="card-img-top" alt="...">
+                                <img src="/img/Projects/StudentX.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">CheatSheet_App</h5>
-                                    <p class="card-text">A cheatsheet app is a tool designed to provide quick reference
-                                        guides or
-                                        summaries of information on a particular topic. These apps are commonly used in
-                                        various
-                                        fields.
+                                    <h5 class="card-title">Student_X</h5>
+                                    <p class="card-text">A Student Management System with role-based access. Students
+                                        can view grades, courses, and events, and submit feedback. Admins can manage
+                                        students, courses, events, and view feedback.
                                         <hr>
-                                        <strong><u>Skills Used :- </strong></u> <i> HTML , CSS , Javascript ,
-                                            PRISM.JS</i>
+                                        <strong>Skills Used :- </strong> <i> JSP, Servlet, JDBC, Hibernate,
+                                            MYSQL</i>
                                     </p>
                                     <div class="button">
-                                        <a href="https://github.com/Abhishek-Mishra31?tab=repositories" target="_blank"
+                                        <a href="https://github.com/Abhishek-Mishra31/Student_X" target="_blank"
                                             class="btn btn-dark">View
                                             Repo</a>
                                     </div>
@@ -268,19 +264,18 @@
                     <div class="carousel-item">
                         <div class="project my-4">
                             <div class="card my-2" style="width: 18rem;">
-                                <img src="/img/weather_app.jpeg" class="card-img-top" alt="...">
+                                <img src="/img/Projects/Quiz_app.png" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Weather_App</h5>
+                                    <h5 class="card-title">Programmiz_Quiz_App</h5>
                                     <p class="card-text">
-                                        A real-time updating weather app is web application that provides constantly
-                                        refreshed and
-                                        accurate weather information. It delivers real-time updates on current weather
-                                        conditions
+                                        A quiz application with two categories: Language-based and DSA-based quizzes.
+                                        Designed to test and improve programming knowledge interactively.
                                         <hr>
-                                        <strong><u>Skills Used :- </strong></u> <i> HTML , CSS , Javascript , API</i>
+                                        <strong>Skills Used :- </strong> <i> ReactJs, NodeJs, React-Router,
+                                            MongoDB</i>
                                     </p>
                                     <div class="button">
-                                        <a href="https://github.com/Abhishek-Mishra31?tab=repositories" target="_blank"
+                                        <a href="https://github.com/Abhishek-Mishra31/Quiz_App" target="_blank"
                                             class="btn btn-dark">View
                                             Repo</a>
                                     </div>
@@ -302,8 +297,7 @@
                 </button>
             </div>
             <div class="info">
-                <p> More Projects Are Available On <a
-                        href="https://github.com/Abhishek-Mishra31" target="_blank">
+                <p> More Projects Are Available On <a href="https://github.com/Abhishek-Mishra31" target="_blank">
                         Github </a></p>
             </div>
             <hr
@@ -327,10 +321,8 @@
                             class='bx bxl-facebook-circle'></i></a>
                     <a href=" https://www.instagram.com/ig_a_b_h_i__/" target="_blank"><i
                             class='bx bxl-instagram'></i></a>
-                    <a href=" https://twitter.com/Abhishe09449303" target="_blank"><i
-                            class='bx bxl-twitter'></i></a>
-                    <a href=" https://github.com/Abhishek-Mishra31" target="_blank"><i
-                            class='bx bxl-github'></i></a>
+                    <a href=" https://twitter.com/Abhishe09449303" target="_blank"><i class='bx bxl-twitter'></i></a>
+                    <a href=" https://github.com/Abhishek-Mishra31" target="_blank"><i class='bx bxl-github'></i></a>
                     <a href=" https://www.linkedin.com/in/abhishek-kumar-192006209/" target="_blank"><i
                             class='bx bxl-linkedin-square'></i></a>
                 </div>
